# Tindex

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
tindex/: __init__.py  __main__.py  config.py  main.py  routes.py  session.py  telegram.py  util.py  views.py
tindex/templates/: footer.html  header.html  home.html  index.html  info.html  otg.html  playlistCreator.html
